make mongoimportjson not crash with small objects, some ProgressMeter enhancements SERVER-342